--- a/app/src/main/res/drawable/app_launcher.xml
+++ b/app/src/main/res/drawable/app_launcher.xml
@@ -4,22 +4,41 @@
     android:width="1024sp"
     android:viewportHeight="1024"
     android:viewportWidth="1024">
-    <path android:fillAlpha="0.098039"
-        android:fillColor="#FF000000"
-        android:pathData="m969.7,351.3q-8.6,-20.9 -19.4,-40.8c-4.1,-7.6 -8.4,-15.1 -12.9,-22.4 -19.5,-31.7 -43.4,-61.7 -71.6,-89.8 -92.2,-92.2 -203.4,-138.3 -333.8,-138.3s-241.6,46.1 -333.8,138.3 -138.3,203.4 -138.3,333.8 46.1,241.6 138.3,333.8 203.4,138.2 333.8,138.2 241.6,-46 333.8,-138.2c50.8,-50.8 87.6,-107.4 110.3,-169.8 18.5,-50.8 27.9,-105.5 27.9,-164.1 0,-44.9 -5.4,-87.6 -16.4,-127.9 -1.3,-4.6 -2.5,-9.1 -3.9,-13.6 -4.1,-13.3 -8.8,-26.4 -14.1,-39.2z"/>
-    <path android:fillColor="#e85479"
-        android:pathData="m982.1,517q0,-2.5 0,-4.9c0,-130.4 -46,-241.6 -138.2,-333.8 -91.9,-91.8 -202.9,-137.9 -332.8,-138.2v475h2v2z"/>
-    <path android:fillColor="#00c0e6"
-        android:pathData="m511.1,40.1c-0.3,0 -0.6,0 -1,0 -130.4,0 -241.6,46 -333.8,138.2s-138.2,203.4 -138.2,333.8v3h473z"/>
-    <path android:fillColor="#ebc240"
-        android:pathData="m513.1,517v-2h-2,-473c0.7,129.1 46.8,239.4 138.2,330.8 92.2,92.2 203.4,138.2 333.8,138.2h1,2z"/>
-    <path android:fillColor="#55da97"
-        android:pathData="m513.1,517v467c129.1,-0.8 239.4,-46.8 330.8,-138.2 90.9,-91 137.1,-200.6 138.2,-328.9z"/>
-    <path android:fillColor="#fff"
-        android:pathData="m862.5,528.8q0.3,-8.3 0.3,-16.8c0,-96.8 -34.3,-179.6 -102.7,-248 -68.5,-68.4 -151.2,-102.7 -248.1,-102.7s-179.6,34.3 -248,102.7 -102.7,151.1 -102.7,248 34.3,179.6 102.7,248.1c68.4,68.4 151.1,102.7 248,102.7 31.4,0 61.3,-3.6 89.8,-10.8 59.2,-15 112,-45.7 158.3,-91.9 64.4,-64.4 98.6,-141.4 102.3,-231.3z"/>
-    <path android:fillAlpha="0.098039"
-        android:fillColor="#FF000000"
-        android:pathData="m760.1,760.1q94.7,-94.8 102.1,-225.7l-177.1,-177.1 -56,34.5 -163.9,-4.6 -72.1,11.1v202.7l-44.5,68 192.7,192.7 0,0c21,-1.6 41.2,-4.8 60.5,-9.8 59.2,-15 112,-45.7 158.3,-91.9z"/>
-    <path android:fillColor="#96a6a6"
-        android:pathData="m692.5,387c0,-33.1 -26.8,-60 -60,-60 -33.1,0 -60,26.9 -60,60 0,29.2 20.9,53.5 48.2,59 -28.4,4.8 -50,29.4 -50,59.2 0,33.2 26.8,60 60,60 33.1,0 60,-26.8 60,-60 0,-29 -20.7,-53.3 -48.2,-58.8 28.4,-4.8 50,-29.5 50,-59.3zM629.5,685c33.2,0 60,-26.8 60,-60 0,-33.1 -26.8,-60 -60,-60 -33.1,0 -60,26.9 -60,60 0,33.2 26.9,60 60,60zM392.7,327.3c-33.1,0 -60,26.9 -60,60 0,16.6 5.9,30.7 17.6,42.4 11.5,11.5 25.4,17.4 41.6,17.5 -16.3,0.2 -30.1,6.1 -41.6,17.5 -11.7,11.7 -17.6,25.9 -17.6,42.4 0,33.2 26.9,60 60,60 29.3,0 53.7,-21 59,-48.9 5.4,28 29.8,48.9 59,48.9q24.9,0 42.4,-17.6 17.6,-17.5 17.6,-42.4c0,-29 -20.7,-53.3 -48.3,-58.9 28.5,-4.8 50.1,-29.4 50.1,-59.2 0,-33.1 -26.8,-60 -60,-60 -33.1,0 -60,26.9 -60,60 0,29.2 20.9,53.5 48.2,59 -24.9,4.2 -44.5,23.6 -49.1,48.2 -2.1,-11.9 -7.6,-22.4 -16.6,-31.4 -11.4,-11.5 -25.4,-17.4 -41.7,-17.5 16.3,-0.2 30.2,-6.1 41.7,-17.5 11.7,-11.7 17.5,-25.8 17.5,-42.4 0,-33.1 -26.8,-60 -60,-60zM569.5,627.2c0,-33.1 -26.9,-60 -60,-60 -29.3,0 -53.8,21.1 -59,48.8 -5.3,-27.8 -29.7,-48.8 -59,-48.8 -33.1,0 -60,26.9 -60,60 0,33.2 26.9,60 60,60 29.3,0 53.6,-20.9 59,-48.8 5.5,28 29.9,48.8 59,48.8 33.2,0 60,-26.8 60,-60z"/>
+    <path
+        android:pathData="m958,513 l-193.5,-153.9 0.3,92.7L482.6,451.7q1.4,7.3 2.4,14.7 1,7.4 1.7,15 0.7,7.4 1,14.9 0.3,7.5 0.5,15 0,7.5 -0.3,15.1 -0.5,7.4 -1.1,15 -0.7,7.4 -1.7,14.9 -1,7.5 -2.4,14.9l282.7,0l0.2,92.7z"
+        android:fillColor="#55da97"/>
+    <path
+        android:pathData="m66,510.9 l193.5,153.9 -0.3,-92.7l282.3,0q-1.4,-7.3 -2.4,-14.7 -1,-7.4 -1.7,-14.9 -0.7,-7.5 -1,-15 -0.3,-7.4 -0.3,-15 0,-7.5 0.3,-15 0.3,-7.5 1,-15.1 0.7,-7.4 1.7,-14.9 1,-7.4 2.4,-14.9l-282.6,0L258.5,360.2Z"
+        android:fillColor="#00c0e6"/>
+    <path
+        android:pathData="m510.1,959.7 l153.9,-193.5 -92.7,0.3L571.4,484.2q-7.3,1.4 -14.7,2.4 -7.4,1 -15,1.7 -7.4,0.7 -14.9,1 -7.5,0.3 -15,0.5 -7.5,0 -15.1,-0.3 -7.4,-0.5 -15,-1.1 -7.4,-0.7 -14.9,-1.7 -7.5,-1 -14.9,-2.4l0,282.7l-92.7,0.2z"
+        android:fillColor="#e85479"/>
+    <path
+        android:pathData="m513.3,64.3 l-153.9,193.5 92.7,-0.3l0,282.3q7.3,-1.4 14.7,-2.4 7.4,-1 14.9,-1.7 7.5,-0.7 15,-1 7.4,-0.3 15,-0.3 7.5,0 15,0.3 7.5,0.3 15.1,1 7.4,0.7 14.9,1.7 7.4,1 14.9,2.4l0,-282.6l92.7,-0.3z"
+        android:fillColor="#ebc240"/>
+    <path
+        android:pathData="m595.7,465.1c21.6,0 44.4,2.7 68.4,7.9L791.4,606.3 708.5,722 562.5,805.1 393.9,630.5C432.7,515.4 502.2,465.1 595.7,465.1Z"
+        android:fillColor="#96a6a6"/>
+    <path
+        android:pathData="M513.9,786C362.5,786 240,663.6 240,512.2 240,360.8 362.5,238.3 513.9,238.3 665.3,238.3 787.7,360.8 787.7,512.2 787.7,663.6 665.3,786 513.9,786Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="m595.7,465.1c-93.4,-0 -162.9,50.3 -201.8,165.4l168.6,174.6 146,-83.1 82.9,-115.7 -127.3,-133.3c-24,-5.2 -46.8,-7.9 -68.4,-7.9z"
+        android:strokeWidth="0.9"
+        android:fillColor="#e6e6e6"/>
+    <path
+        android:pathData="M513.3,382.3 L359.4,473.5 452,473.3l0,133q7.3,-0.6 14.7,-1.1 7.4,-0.5 14.9,-0.8 7.5,-0.3 15,-0.5 7.4,-0.2 15,-0.2 7.5,0 15,0.2 7.5,0.2 15.1,0.5 7.4,0.3 14.9,0.8 7.4,0.5 14.9,1.1L571.4,473.2l92.7,-0.2z"
+        android:strokeWidth="0.8"
+        android:fillColor="#96a6a6"/>
+    <path
+        android:pathData="M393.9,470l235.7,0l0,160.6l-235.7,0z"
+        android:strokeWidth="0.9"
+        android:fillColor="#96a6a6"/>
+    <path
+        android:pathData="M393.9,630.5 L541.4,786"
+        android:strokeWidth="0.9"
+        android:fillColor="#96a6a6"/>
+    <path
+        android:pathData="M513.9,214C474.8,214 435.9,221.8 399.8,236.8 363.7,251.7 330.8,273.7 303.1,301.4 275.4,329.1 253.4,362 238.5,398.1 223.5,434.3 215.7,473.1 215.7,512.2c0,39.2 7.8,77.9 22.7,114.2 15,36.1 36.9,69 64.6,96.7 27.7,27.7 60.6,49.7 96.7,64.6 36.1,15 75,22.7 114.1,22.7 39.2,0 77.9,-7.8 114.2,-22.7 36.1,-15 69,-36.9 96.7,-64.6 27.7,-27.7 49.7,-60.6 64.6,-96.7 15,-36.3 22.7,-75 22.7,-114.2C812.1,473.1 804.3,434.3 789.4,398.1 774.4,362 752.4,329.1 724.7,301.4 697,273.7 664.2,251.7 628,236.8 591.8,221.8 553,214 513.9,214ZM513.9,238.3C665.3,238.3 787.7,360.8 787.7,512.2 787.7,663.6 665.3,786 513.9,786 362.5,786 240,663.6 240,512.2c0,-151.3 122.5,-273.8 273.8,-273.8z"
+        android:fillColor="#96a6a6"/>
 </vector>
