refactor: Cleaned up the way that we move between fragments
I have removed the need for ViewPager2 to move between fragments

--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -8,6 +8,7 @@
     tools:context=".ui.drawer.DrawFragment">
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/mainView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -49,6 +50,13 @@
             android:layout_height="wrap_content" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <FrameLayout
+        android:id="@+id/touchArea"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/draw_search_button"
