--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -777,4 +777,11 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
     </com.github.droidworksstudio.launcher.view.GestureNestedScrollView>
 
+    <FrameLayout
+        android:id="@+id/touchArea"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </FrameLayout>
