--- a/app/src/main/res/layout/fragment_widget_manager.xml
+++ b/app/src/main/res/layout/fragment_widget_manager.xml
@@ -19,8 +19,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp"/>
+            android:padding="16dp" />
     </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/touchArea"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
