--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,39 +7,42 @@
     android:id="@+id/favorite_view"
     tools:context=".ui.favorite.FavoriteFragment">
 
-        <FrameLayout
-            android:id="@+id/fragment_container"
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_height="match_parent"
+        android:layout_marginVertical="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/topTextView"
             android:layout_width="match_parent"
-            android:clickable="true"
-            android:focusable="true"
-            android:layout_height="match_parent"
-            android:layout_marginVertical="32dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="Home App Order"
+            android:textSize="@dimen/text_super_large"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/TextDefaultStyle" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/topTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:text="Home App Order"
-                    android:textSize="@dimen/text_super_large"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    style="@style/TextDefaultStyle"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/favoriteAdapter"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="92dp"
+            app:layout_constraintTop_toBottomOf="@id/topTextView" />
+    </FrameLayout>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/favoriteAdapter"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_marginHorizontal="20dp"
-                    android:layout_marginTop="92dp"
-                    app:layout_constraintTop_toBottomOf="@id/topTextView"
-                    />
-
-        </FrameLayout>
-
-
+    <FrameLayout
+        android:id="@+id/touchArea"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
