--- a/app/src/main/res/layout/fragment_hidden.xml
+++ b/app/src/main/res/layout/fragment_hidden.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/hidden_view"
-    tools:context=".ui.favorite.FavoriteFragment">
+    tools:context=".ui.hidden.HiddenFragment">
 
     <FrameLayout
         android:id="@+id/fragment_container"
@@ -36,10 +35,13 @@
             android:layout_weight="1"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="92dp"
-            app:layout_constraintTop_toBottomOf="@id/topTextView"
-            />
-
+            app:layout_constraintTop_toBottomOf="@id/topTextView" />
     </FrameLayout>
 
-
+    <FrameLayout
+        android:id="@+id/touchArea"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
