--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -1,20 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
    Sample data extraction rules file; uncomment and customize as necessary.
    See https://developer.android.com/about/versions/12/backup-restore#xml-changes
    for details.
 -->
 <data-extraction-rules>
-    <cloud-backup>
-        <!-- TODO: Use <include> and <exclude> to control what is backed up.
-        <include .../>
-        <exclude .../>
-        -->
+    <full-backup-content>
+        <include domain="file" />
+        <include domain="database" />
+        <include domain="sharedpref" />
+        <exclude domain="external" />
+        <exclude domain="root" />
+    </full-backup-content>
+    <cloud-backup disableIfNoEncryptionCapabilities="false">
+        <include domain="file" />
+        <include domain="database" />
+        <include domain="sharedpref" />
+        <exclude domain="external" />
+        <exclude domain="root" />
     </cloud-backup>
-    <!--
     <device-transfer>
-        <include .../>
-        <exclude .../>
+        <include domain="file" />
+        <include domain="database" />
+        <include domain="sharedpref" />
+        <exclude domain="external" />
+        <exclude domain="root" />
     </device-transfer>
-    -->
 </data-extraction-rules>
