--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true"
-    android:orientation="vertical"
-    android:longClickable="true"
     tools:context=".ui.home.HomeFragment">
 
     <com.github.droidworksstudio.launcher.view.GestureNestedScrollView
         android:id="@+id/nestScrollView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +42,7 @@
                     android:layout_gravity="end"
                     android:text="@string/battery_level"
                     android:textSize="16sp"
-                    style="@style/TextDefaultStyle"/>
+                    style="@style/TextDefaultStyle" />
 
                 <TextClock
                     android:id="@+id/clock"
@@ -57,7 +54,7 @@
                     android:format12Hour="h:mm"
                     android:textSize="48sp"
                     tools:text="02:34"
-                    style="@style/TextDefaultStyle"/>
+                    style="@style/TextDefaultStyle" />
 
                 <TextClock
                     android:id="@+id/date"
@@ -70,7 +67,7 @@
                     android:paddingHorizontal="2dp"
                     android:textSize="32sp"
                     tools:text="Thu, 30 Dec"
-                    style="@style/TextDefaultStyle"/>
+                    style="@style/TextDefaultStyle" />
 
                 <TextView
                     android:id="@+id/word"
@@ -85,18 +82,10 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/appListAdapter"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
+                android:layout_height="wrap_content" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </com.github.droidworksstudio.launcher.view.GestureNestedScrollView>
 
-    <FrameLayout
-        android:id="@+id/touchArea"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
