--- a/app/src/main/res/layout/fragment_hidden.xml
+++ b/app/src/main/res/layout/fragment_hidden.xml
@@ -8,6 +8,13 @@
     tools:context=".ui.hidden.HiddenFragment">
 
     <FrameLayout
+        android:id="@+id/touchArea"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:clickable="true"
@@ -22,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:text="Hidden App"
+            android:text="@string/hidden_fragment_name"
             android:textSize="@dimen/text_super_large"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,9 +37,8 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/hiddenAdapter"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="92dp"
             app:layout_constraintTop_toBottomOf="@id/topTextView" />
