Feat: Added work profile support with icon.
Signed-off-by: HeCodes2Much <wayne6324@gmail.com>

--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -53,7 +53,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/drawAdapter"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/search_view_text" />
 
